add attribute images, update html

--- a/index.html
+++ b/index.html
@@ -8,41 +8,45 @@
     <link href src="css/main.css">
     <script defer src="js/main.js"></script>
 </head>
-<wrapper>
+
 <body>
     <h1>Guess Who: Animals</h1>
+<wrapper>    
     <main>
-        <img class="animal1" src="https://i.imgur.com/NukD0B6.jpg">
-        <img class="animal2" src="https://i.imgur.com/ZFkehs9.jpg">
-        <img class="animal3" src="https://i.imgur.com/UwsKzMx.jpg">
-        <img class="animal4" src="https://i.imgur.com/2LGJmqj.jpg">
-        <img class="animal5" src="https://i.imgur.com/axaFLnb.png">
-        <img class="animal6" src="https://i.imgur.com/LjnMIH8.png">
-        <img class="animal7" src="https://i.imgur.com/MzLsoGf.png">
-        <img class="animal8" src="https://i.imgur.com/FqhJsnw.jpg">
-        <img class="animal9" src="https://i.imgur.com/cZ2zpiL.jpg">
-        <img class="animal10" src="https://i.imgur.com/Z6HkAcD.jpg">
-        <img class="animal11" src="https://i.imgur.com/zG9J5WQ.png">
-        <img class="animal12" src="https://i.imgur.com/V3iBscW.jpg">
+        <img class="dalmation" src="https://i.imgur.com/NukD0B6.jpg">
+        <img class="yellowBird" src="https://i.imgur.com/ZFkehs9.jpg">
+        <img class="sheltie" src="https://i.imgur.com/UwsKzMx.jpg">
+        <img class="shark" src="https://i.imgur.com/2LGJmqj.jpg">
+        <img class="rainbowFish" src="https://i.imgur.com/axaFLnb.png">
+        <img class="panther" src="https://i.imgur.com/LjnMIH8.png">
+        <img class="lion" src="https://i.imgur.com/MzLsoGf.png">
+        <img class="leopard" src="https://i.imgur.com/FqhJsnw.jpg">
+        <img class="husky" src="https://i.imgur.com/cZ2zpiL.jpg">
+        <img class="greenBird" src="https://i.imgur.com/Z6HkAcD.jpg">
+        <img class="flamingo" src="https://i.imgur.com/zG9J5WQ.png">
+        <img class="clownFish" src="https://i.imgur.com/V3iBscW.jpg">
     </main>
+</wrapper>
+
+<wrapper>
     <aside>
-        <img class="attribute1">
-        <img class="attribute2">
-        <img class="attribute3">
-        <img class="attribute4">
-        <img class="attribute5">
-        <img class="attribute6">
-        <img class="attribute7">
-        <img class="attribute8">
-        <img class="attribute9">
-        <img class="attribute10">
-        <img class="attribute11">
-        <img class="attribute12">
-        <img class="attribute13">
-        <img class="attribute14">
+        <img class="attFloppyEar" src="https://i.imgur.com/WLHSmCV.png">
+        <img class="attWater" src="https://i.imgur.com/Gsju38m.jpg">
+        <img class="attScales" src="https://i.imgur.com/vULYejO.jpg">
+        <img class="attTeeth" src="https://i.imgur.com/VnNJvBu.jpg">
+        <img class="attFins" src="https://i.imgur.com/nvExflC.png">
+        <img class="attAir" src="https://i.imgur.com/9lz0ugw.jpg">
+        <img class="attTail" src="https://i.imgur.com/Ud5Y9fb.jpg">
+        <img class="attFur" src="https://i.imgur.com/uH8nZ3d.png">
+        <img class="attBeak" src="https://i.imgur.com/Lxi7d8P.jpg">
+        <img class="attTwoLegs" src="https://i.imgur.com/ZczdIEQ.jpg">
+        <img class="attFeathers" src="https://i.imgur.com/Bvn61EC.jpg">
+        <img class="attSpots" src="https://i.imgur.com/IRm1mbT.png">
+        <img class="attNose" src="https://i.imgur.com/Aa4EmyE.jpg">
+        <img class="attEggs" src="https://i.imgur.com/sGLgsEM.jpg">
     </aside>
     <footer></footer>
     
-</body>
 </wrapper>
+</body>
 </html>
