--- a/index.html
+++ b/index.html
@@ -5,48 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Guess Who: Animals</title>
-    <link href src="css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
     <script defer src="js/main.js"></script>
 </head>
 
 <body>
     <h1>Guess Who: Animals</h1>
-<wrapper>    
+<div class="wrapper">    
     <main>
-        <img class="dalmation" src="https://i.imgur.com/NukD0B6.jpg">
-        <img class="yellowBird" src="https://i.imgur.com/ZFkehs9.jpg">
-        <img class="sheltie" src="https://i.imgur.com/UwsKzMx.jpg">
-        <img class="shark" src="https://i.imgur.com/2LGJmqj.jpg">
-        <img class="rainbowFish" src="https://i.imgur.com/axaFLnb.png">
-        <img class="panther" src="https://i.imgur.com/LjnMIH8.png">
-        <img class="lion" src="https://i.imgur.com/MzLsoGf.png">
-        <img class="leopard" src="https://i.imgur.com/FqhJsnw.jpg">
-        <img class="husky" src="https://i.imgur.com/cZ2zpiL.jpg">
-        <img class="greenBird" src="https://i.imgur.com/Z6HkAcD.jpg">
-        <img class="flamingo" src="https://i.imgur.com/zG9J5WQ.png">
-        <img class="clownFish" src="https://i.imgur.com/V3iBscW.jpg">
+        <div class="row1">
+            <img class="dalmation" src="https://i.imgur.com/NukD0B6.jpg">
+            <img class="yellowBird" src="https://i.imgur.com/ZFkehs9.jpg">
+            <img class="sheltie" src="https://i.imgur.com/UwsKzMx.jpg">
+        </div>
+        <div class="row2">
+            <img class="shark" src="https://i.imgur.com/2LGJmqj.jpg">
+            <img class="rainbowFish" src="https://i.imgur.com/axaFLnb.png">
+            <img class="panther" src="https://i.imgur.com/LjnMIH8.png">
+        </div>
+        <div class="row3">
+            <img class="lion" src="https://i.imgur.com/MzLsoGf.png">
+            <img class="leopard" src="https://i.imgur.com/FqhJsnw.jpg">
+            <img class="husky" src="https://i.imgur.com/cZ2zpiL.jpg">
+        </div>
+        <div class="row4">
+            <img class="greenBird" src="https://i.imgur.com/Z6HkAcD.jpg">
+            <img class="flamingo" src="https://i.imgur.com/zG9J5WQ.png">
+            <img class="clownFish" src="https://i.imgur.com/V3iBscW.jpg">
+        </div>
     </main>
-</wrapper>
 
-<wrapper>
-    <aside>
-        <img class="attFloppyEar" src="https://i.imgur.com/WLHSmCV.png">
-        <img class="attWater" src="https://i.imgur.com/Gsju38m.jpg">
-        <img class="attScales" src="https://i.imgur.com/vULYejO.jpg">
-        <img class="attTeeth" src="https://i.imgur.com/VnNJvBu.jpg">
-        <img class="attFins" src="https://i.imgur.com/nvExflC.png">
-        <img class="attAir" src="https://i.imgur.com/9lz0ugw.jpg">
-        <img class="attTail" src="https://i.imgur.com/Ud5Y9fb.jpg">
-        <img class="attFur" src="https://i.imgur.com/uH8nZ3d.png">
-        <img class="attBeak" src="https://i.imgur.com/Lxi7d8P.jpg">
-        <img class="attTwoLegs" src="https://i.imgur.com/ZczdIEQ.jpg">
-        <img class="attFeathers" src="https://i.imgur.com/Bvn61EC.jpg">
-        <img class="attSpots" src="https://i.imgur.com/IRm1mbT.png">
-        <img class="attNose" src="https://i.imgur.com/Aa4EmyE.jpg">
-        <img class="attEggs" src="https://i.imgur.com/sGLgsEM.jpg">
+
+    <aside class="attributes">
+        <div class="column1">
+            <img class="attFloppyEar" src="https://i.imgur.com/WLHSmCV.png">
+            <img class="attWater" src="https://i.imgur.com/Gsju38m.jpg">
+            <img class="attScales" src="https://i.imgur.com/vULYejO.jpg">
+            <img class="attTeeth" src="https://i.imgur.com/VnNJvBu.jpg">
+            <img class="attFins" src="https://i.imgur.com/nvExflC.png">
+            <img class="attAir" src="https://i.imgur.com/9lz0ugw.jpg">
+            <img class="attTail" src="https://i.imgur.com/Ud5Y9fb.jpg">
+        </div>
+        <div class="column2">
+            <img class="attFur" src="https://i.imgur.com/uH8nZ3d.png">
+            <img class="attBeak" src="https://i.imgur.com/Lxi7d8P.jpg">
+            <img class="attTwoLegs" src="https://i.imgur.com/ZczdIEQ.jpg">
+            <img class="attFeathers" src="https://i.imgur.com/Bvn61EC.jpg">
+            <img class="attSpots" src="https://i.imgur.com/IRm1mbT.png">
+            <img class="attNose" src="https://i.imgur.com/Aa4EmyE.jpg">
+            <img class="attEggs" src="https://i.imgur.com/sGLgsEM.jpg">
+        </div>
     </aside>
     <footer></footer>
     
-</wrapper>
+</div>
 </body>
 </html>
