update css, html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Guess Who: Animals</title>
-    <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet">
+    <link href="https://www.dafont.com/cute-animal.font">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Concert+One" rel="stylesheet"> -->
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <script defer src="js/main.js"></script>
 </head>
@@ -13,52 +14,51 @@
 <body>
     <h1>Guess Who: Animals</h1>
 <div class="wrapper">    
-    <main>
+    <main class="main">
         <div class="row1">
-            <img class="dalmation" src="https://i.imgur.com/NukD0B6.jpg">
-            <img class="yellowBird" src="https://i.imgur.com/ZFkehs9.jpg">
-            <img class="sheltie" src="https://i.imgur.com/UwsKzMx.jpg">
+            <img class="animalPics" id="dalmation" src="https://i.imgur.com/NukD0B6.jpg">
+            <img class="animalPics" id="yellowBird" src="https://i.imgur.com/ZFkehs9.jpg">
+            <img class="animalPics" id="sheltie" src="https://i.imgur.com/UwsKzMx.jpg">
         </div>
         <div class="row2">
-            <img class="shark" src="https://i.imgur.com/2LGJmqj.jpg">
-            <img class="rainbowFish" src="https://i.imgur.com/axaFLnb.png">
-            <img class="panther" src="https://i.imgur.com/LjnMIH8.png">
+            <img class="animalPics" id="shark" src="https://i.imgur.com/2LGJmqj.jpg">
+            <img class="animalPics" id="rainbowFish" src="https://i.imgur.com/axaFLnb.png">
+            <img class="animalPics" id="panther" src="https://i.imgur.com/LjnMIH8.png">
         </div>
         <div class="row3">
-            <img class="lion" src="https://i.imgur.com/MzLsoGf.png">
-            <img class="leopard" src="https://i.imgur.com/FqhJsnw.jpg">
-            <img class="husky" src="https://i.imgur.com/cZ2zpiL.jpg">
+            <img class="animalPics" id="lion" src="https://i.imgur.com/MzLsoGf.png">
+            <img class="animalPics" id="leopard" src="https://i.imgur.com/FqhJsnw.jpg">
+            <img class="animalPics" id="husky" src="https://i.imgur.com/cZ2zpiL.jpg">
         </div>
         <div class="row4">
-            <img class="greenBird" src="https://i.imgur.com/Z6HkAcD.jpg">
-            <img class="flamingo" src="https://i.imgur.com/zG9J5WQ.png">
-            <img class="clownFish" src="https://i.imgur.com/V3iBscW.jpg">
+            <img class="animalPics" id="greenBird" src="https://i.imgur.com/Z6HkAcD.jpg">
+            <img class="animalPics" id="flamingo" src="https://i.imgur.com/zG9J5WQ.png">
+            <img class="animalPics" id="clownFish" src="https://i.imgur.com/V3iBscW.jpg">
         </div>
     </main>
 
 
     <aside class="attributes">
         <div class="column1">
-            <img class="attFloppyEar" src="https://i.imgur.com/WLHSmCV.png">
-            <img class="attWater" src="https://i.imgur.com/Gsju38m.jpg">
-            <img class="attScales" src="https://i.imgur.com/vULYejO.jpg">
-            <img class="attTeeth" src="https://i.imgur.com/VnNJvBu.jpg">
-            <img class="attFins" src="https://i.imgur.com/nvExflC.png">
-            <img class="attAir" src="https://i.imgur.com/9lz0ugw.jpg">
-            <img class="attTail" src="https://i.imgur.com/Ud5Y9fb.jpg">
+            <img class ="animalTraits" id="attFloppyEar" src="https://i.imgur.com/WLHSmCV.png">
+            <img class ="animalTraits" id="attWater" src="https://i.imgur.com/Gsju38m.jpg">
+            <img class ="animalTraits" id="attScales" src="https://i.imgur.com/vULYejO.jpg">
+            <img class ="animalTraits" id="attTeeth" src="https://i.imgur.com/VnNJvBu.jpg">
+            <img class ="animalTraits" id="attFins" src="https://i.imgur.com/nvExflC.png">
+            <img class ="animalTraits" id="attAir" src="https://i.imgur.com/9lz0ugw.jpg">
+            <img class ="animalTraits" id="attTail" src="https://i.imgur.com/Ud5Y9fb.jpg">
         </div>
         <div class="column2">
-            <img class="attFur" src="https://i.imgur.com/uH8nZ3d.png">
-            <img class="attBeak" src="https://i.imgur.com/Lxi7d8P.jpg">
-            <img class="attTwoLegs" src="https://i.imgur.com/ZczdIEQ.jpg">
-            <img class="attFeathers" src="https://i.imgur.com/Bvn61EC.jpg">
-            <img class="attSpots" src="https://i.imgur.com/IRm1mbT.png">
-            <img class="attNose" src="https://i.imgur.com/Aa4EmyE.jpg">
-            <img class="attEggs" src="https://i.imgur.com/sGLgsEM.jpg">
+            <img class ="animalTraits" id="attFur" src="https://i.imgur.com/uH8nZ3d.png">
+            <img class ="animalTraits" id="attBeak" src="https://i.imgur.com/Lxi7d8P.jpg">
+            <img class ="animalTraits" id="attTwoLegs" src="https://i.imgur.com/ZczdIEQ.jpg">
+            <img class ="animalTraits" id="attFeathers" src="https://i.imgur.com/Bvn61EC.jpg">
+            <img class ="animalTraits" id="attSpots" src="https://i.imgur.com/IRm1mbT.png">
+            <img class ="animalTraits" id="attNose" src="https://i.imgur.com/Aa4EmyE.jpg">
+            <img class ="animalTraits" id="attEggs" src="https://i.imgur.com/sGLgsEM.jpg">
         </div>
     </aside>
-    <footer></footer>
-    
 </div>
+<footer>Michelle McGuire 2019</footer>
 </body>
 </html>
